@@ -324,6 +324,8 @@ Various bugfixes, small features, and a few experimental things:
 * (bug 2178) Fix temp dir check again
 * (bug 2488) Format 'deletedtext' message as wikitext
 * (bug 750) Keep line endings consistent in LocalSettings.php
+* (bug 1577) Add 'printable version' tab in MonoBook for people who don't
+  realize you can just hit print to get a nicely formatted printable page.
 
 
 === Caveats ===
